--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,16 @@
 <!--
  * @Author: your name
  * @Date: 2021-08-30 16:15:34
- * @LastEditTime: 2021-08-30 17:15:09
- * @LastEditors: Please set LastEditors
+ * @LastEditTime: 2021-09-13 22:59:51
+ * @LastEditors: imsixn
  * @Description: In User Settings Edit
  * @FilePath: \angel-color\public\index.html
 -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -32,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>AngelCalculator</title>
+    <title>角度计算器2.0</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
